# src/routes/specifications.routes.ts
@@ -1,11 +1,10 @@
-import {Router } from 'express'
-
-import {createSpecificationController} from '../modules/cars/useCases/createSpecification';
+import { Router } from "express";
+import { CreateSpecificationController } from "../modules/cars/useCases/createSpecification/CreateSpecificationController";
 
 const specificationsRoutes = Router();
 
-specificationsRoutes.post('/', (request, response) => {
-  return createSpecificationController.handle(request, response);
-})
+const createSpecificationController = new CreateSpecificationController();
 
-export {specificationsRoutes}
+specificationsRoutes.post("/", createSpecificationController.handle);
+
+export { specificationsRoutes };
